<resources>
    <string name="app_name">Companion</string>
    <string name="action_settings">Settings</string>
    <string name="hint_assignment_title">Assignment Name *</string>
    <string name="action_confirm">Confirm</string>
    <string name="label_due_date">Due date *</string>
    <string name="label_due_time">Time due *</string>
    <string name="label_start_date">Start date</string>
    <string name="label_start_time">Start time</string>
    <string name="error_assignment_title">You need to enter a unique assignment name</string>
    <string name="start_date_add">Start time information</string>

    <string name="expansion_button_label">Expand optional start date input field</string>
</resources>
